--- a/lang/ar.json
+++ b/lang/ar.json
@@ -24,12 +24,13 @@
   "mosque": "المسجد",
   "selectMosque": "اختر المسجد",
   "register": "تأكيد",
+  "proceed": "تابع",
   "problemOccurred": "حدثت مشكلة، يرجى المحاولة مرة أخرى.",
   "resetPassword": "تم إرسال رابط إعادة تعيين كلمة المرور! تحقق من بريدك الالكتروني",
   "skip": "تخطي",
   "confirmSkipping": "هل أنت متأكد أنك تريد المتابعة دون الاتصال بجهازك؟",
   "scan": "بحث",
-  "scanning": "اكمال البحث",
+  "scanning": "جاري البحث",
   "notFound": "لم يتم العثور علي الجهاز",
   "connect": "جاري الاتصال ب",
   "confirmLogOutTitle": "تأكيد تسجيل الخروج",
@@ -47,6 +48,7 @@
   "settings": "الاعدادات",
   "logout": "تسجيل الخروج",
   "dateTime": "تاريخ ووقت الوحدة: ",
+  "city": "المدينة: ",
   "prayTimes": "أوقات الصلاه: ",
   "fajr": "الفجر",
   "duhr": "الظهر",
@@ -76,5 +78,6 @@
   "submit": "تسليم",
   "hello": "مرحبا بك",
   "editProfile": "تعديل الملف الشخصي",
-  "update": "تحديث"
+  "update": "تحديث",
+  "updateError": "أنت لم تقم بتحديث أي شيء. هل أنت متأكد أنك تريد تحديث معلوماتك؟"
 }
