--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,9 +1,13 @@
 {
+  "access": "السماح بالوصول إلى الموقع",
+  "authorize": "",
   "email": "البريد الالكتروني",
   "password": "كلمة المرور",
   "emailError": "لم يتم العثور على البريد الإلكتروني",
   "forgetPassword": "هل نسيت كلمة المرور؟",
   "login": "تسجيل الدخول",
+  "logging": "جاري تسجيل الدخول...",
+  "rememberPass": "أبق تسجيل دخولي",
   "noAccount": "ليس لديك حساب؟",
   "error": "حدثت مشكله",
   "loginError": "تعذر تسجيل الدخول. برجاء المحاوله مره أخري.",
@@ -58,6 +62,9 @@
   "settingOptions": "الاعدادات: ",
   "settingPrayerTimes": "ضبط أوقات الصلاة",
   "restart": "اعادة تشغيل",
+  "lostConnection": "لقد تم فقد الاتصال. تحقق من البلوتوث الخاص بك من فضلك.",
+  "restarting": "جاري اعادة الاتصال...",
+  "restartError": "فشل اعادة التشغيل. من فضلك حاول مره أخري.",
   "longitudeLatitude": "وحدة الطول ودوائر العرض: ",
   "unitData": "بيانات الوحدة",
   "longitude": "خط الطول",
@@ -68,8 +75,11 @@
   "settingUnitLocation": "ضبط موقع الوحده",
   "settingUnitZone": "ضبط منطقة الوحده",
   "testMode": "وضع الاختبار",
-  "soundOptions": "خيارات الصوت: ",
+  "soundOptions": "اختبارات أصوات الأذان: ",
   "selectSound": "اختر صوت",
+  "updating": "جاري التحديث...",
+  "locationError": "فشلت المحاوله. من فضلك اعد المحاوله مره أخري.",
+  "minute": "انتظر لحظه.",
   "help": "كيف يمكننا المساعده؟ ",
   "azaanTime": "وقت الأذان",
   "leds": "جميع مصابيح LED قيد التشغيل",
