--- a/lang/en.json
+++ b/lang/en.json
@@ -1,9 +1,13 @@
 {
+  "access": "Access The Access",
+  "authorize": "Authorize the FlutterReactiveBle example app to use Bluetooth and location",
   "email": "Email",
   "password": "Password",
   "emailError": "This Email isn't Fount",
   "forgetPassword": "Forget Password?",
   "login": "LogIn",
+  "logging": "Logging In...",
+  "rememberPass": "Remember ME",
   "noAccount": "Don't Have An Account?",
   "error": "Error",
   "loginError": "Failed to login. Please Try Again",
@@ -59,6 +63,9 @@
   "settingOptions": "Settings Options: ",
   "settingPrayerTimes": "Setting Prayer Times",
   "restart": "Restarting The Unit",
+  "lostConnection": "Lost Connection. Check your bluetooth please.",
+  "restarting":"Restarting...",
+  "restartError": "Failed to restart. Please Try Again",
   "longitudeLatitude": "Unit Longitude And Latitude: ",
   "unitData": "Unit Data",
   "longitude": "Longitude",
@@ -71,6 +78,9 @@
   "testMode": "Enter Test Mode",
   "soundOptions": "Sound Options: ",
   "selectSound": "Select A Sound",
+  "updating": "Updating...",
+  "locationError": "Failed to set Location. Please Try Again.",
+  "minute": "Wait A Minute",
   "help": "How can we help you",
   "azaanTime": "Azaan Time",
   "leds": "All LEDs On",
