--- a/lang/ar.json
+++ b/lang/ar.json
@@ -45,6 +45,7 @@
   "no": "لا",
   "confirmExitTitle": "تأكيد الخروج",
   "confirmExitHeadline": "هل حقا تريد الخروج؟",
+  "disconnectHeadline": "من فضلك قم بالبحث عن جهازك مره أخري.",
   "dashboard": "الصفحه الرئيسيه",
   "accountDetails": "تفاصيل الحساب",
   "changePassword": "تغيير كلمة السر",
