--- a/lang/ar.json
+++ b/lang/ar.json
@@ -12,6 +12,7 @@
   "error": "حدثت مشكله",
   "loginError": "تعذر تسجيل الدخول. برجاء المحاوله مره أخري.",
   "ok": "حسنا",
+  "validator": "برجاء ادخال المعلومه السابقه.",
   "userName": "اسم المستخدم",
   "userNameError": "اسم المستخدم هذا قيد الاستخدام",
   "signUp": "انشاء حساب جديد",
@@ -90,5 +91,5 @@
   "hello": "مرحبا بك",
   "editProfile": "تعديل الملف الشخصي",
   "update": "تحديث",
-  "updateError": "أنت لم تقم بتحديث أي شيء. هل أنت متأكد أنك تريد تحديث معلوماتك؟"
+  "updateError": "أنت لم تقم التحديث. هل أنت متأكد أنك تريد تحديث معلوماتك؟"
 }
