--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,6 +1,6 @@
 {
-  "access": "السماح بالوصول إلى الموقع",
-  "authorize": "",
+  "accessLocation": "السماح بالوصول إلى الموقع",
+  "accessBluetooth": "السماح بالوصول إلى البلوتوث",
   "email": "البريد الالكتروني",
   "password": "كلمة المرور",
   "emailError": "لم يتم العثور على البريد الإلكتروني",
@@ -64,7 +64,6 @@
   "settingOptions": "الاعدادات: ",
   "settingPrayerTimes": "ضبط أوقات الصلاة",
   "restart": "اعادة تشغيل",
-  "lostConnection": "لقد تم فقد الاتصال. تحقق من البلوتوث الخاص بك من فضلك.",
   "restarting": "جاري اعادة الاتصال...",
   "restartError": "فشل اعادة التشغيل. من فضلك حاول مره أخري.",
   "longitudeLatitude": "وحدة الطول ودوائر العرض: ",
