login_exception commit

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -11,6 +11,15 @@
   "noAccount": "ليس لديك حساب؟",
   "error": "حدثت مشكله",
   "loginError": "تعذر تسجيل الدخول. برجاء المحاوله مره أخري.",
+  "emailInUseError": "عنوان البريد الإلكتروني مستخدم بالفعل من قبل حساب آخر.",
+  "invalidEmailError": "عنوان البريد الإلكتروني غير صالح.",
+  "operationNotAllowedError": "العملية المطلوبة غير مسموح بها.",
+  "userNotFoundError": "لا يوجد مستخدم يتوافق مع عنوان البريد الإلكتروني المُعطى.",
+  "wrongPasswordError": "كلمة المرور غير صالحة للبريد الإلكتروني المعطى.",
+  "userDisabledError": "تم تعطيل حساب المستخدم بواسطة المسؤول.",
+  "weakPasswordError": "كلمة المرور ضعيفة جدًا.",
+  "tooManyRequestsError": "الكثير من المحاولات. الرجاء المحاولة مرة أخرى لاحقًا.",
+  "defaultError": "حدث خطأ. يرجى المحاولة مرة أخرى في وقت لاحق.",
   "ok": "حسنا",
   "validator": "برجاء ادخال المعلومه السابقه.",
   "userName": "اسم المستخدم",
@@ -46,6 +55,7 @@
   "no": "لا",
   "confirmExitTitle": "تأكيد الخروج",
   "confirmExitHeadline": "هل حقا تريد الخروج؟",
+  "disconnectTitle": "تم فقد الأتصال",
   "disconnectHeadline": "من فضلك قم بالبحث عن جهازك مره أخري.",
   "dashboard": "الصفحه الرئيسيه",
   "accountDetails": "تفاصيل الحساب",
