--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,15 @@
   "noAccount": "Don't Have An Account?",
   "error": "Error",
   "loginError": "Failed to login. Please Try Again",
+  "emailInUseError": "The email address is already in use by another account.",
+  "invalidEmailError": "The email address is invalid.",
+  "operationNotAllowedError": "The requested operation is not allowed.",
+  "userNotFoundError": "User not found. Please check your email and try again.",
+  "wrongPasswordError": "Invalid password. Please try again.",
+  "userDisabledError": "The user account has been disabled by an administrator.",
+  "weakPasswordError": "The password is too weak.",
+  "tooManyRequestsError": "Too many requests. Please try again later.",
+  "defaultError": "An error occurred. Please try again later.",
   "ok": "OK",
   "validator": "Field is Required.",
   "userName": "userName",
@@ -47,6 +56,7 @@
   "no": "No",
   "confirmExitTitle": "Confirm Exit",
   "confirmExitHeadline": "Do you really want to exit?",
+  "disconnectTitle": "Disconnected",
   "disconnectHeadline": "Please Go Back and Rescan your Unit",
   "dashboard": "Dashboard",
   "accountDetails": "Account Details",
